--- a/01-color-switcher.html
+++ b/01-color-switcher.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color switcher</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Image Search App</title>
   </head>
-  <body>
-    <p><a href="index.html">Go back</a></p>
 
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+  <body>
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+
+      <div class="gallery"></div>
+      <button type="button" class="load-more">Load more</button>
+
+      <div class="notification" id="notification"></div>
+    </div>
 
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
